--- a/index.html
+++ b/index.html
@@ -34,5 +34,153 @@
         <div></div>
       </div>
     </header>
+    <div class="info">
+      <div class="container">
+        <img src="media/Composite Path.png" alt="" />
+        <p>
+          Donec rutrum congue leo eget malesuada. Curabitur non nulla sit amet
+          nisl tempus convallis quis ac lectus. Proin eget tortor risus. Mauris
+          blandit aliquet elit, eget tincidunt nibh pulvinar a. Curabitur non
+          nulla sit amet nisl tempus.
+        </p>
+      </div>
+    </div>
+    <div class="services section">
+      <div class="container">
+        <div class="section-title">
+          <img src="media/axe-svgrepo-com.svg" alt="" />
+          <h2>our services</h2>
+          <p>
+            Vestibulum ac diam sit amet quam vehicula elementum sed sit amet
+            dui. Quisque velit nisi, pretium ut lacinia in, elementum id enim.
+            Donec sollicitudin molestie malesuada
+          </p>
+        </div>
+        <div class="services-content">
+          <div class="cell">
+            <div class="box shape">
+              <i class="fa-solid fa-print fa-3x"></i>
+              <h3>graphic design</h3>
+              <p>
+                Vestibulum ac diam sit amet quam vehicula elementum sed sit amet
+                dui. Quisque velit nisi, pretium ut lacinia in, elementum id
+                enim. Donec sollicitudin
+              </p>
+            </div>
+            <div class="level shape">
+              <h4>ps</h4>
+              <div class="prograss">
+                <span></span>
+              </div>
+              <h4>ai</h4>
+              <div class="prograss">
+                <span></span>
+              </div>
+              <h4>id</h4>
+              <div class="prograss">
+                <span></span>
+              </div>
+            </div>
+          </div>
+          <div class="cell">
+            <div class="box shape">
+              <i class="fa-solid fa-paint-roller fa-3x"></i>
+              <h3>web design</h3>
+              <p>
+                Vestibulum ac diam sit amet quam vehicula elementum sed sit amet
+                dui. Quisque velit nisi, pretium ut lacinia in, elementum id
+                enim. Donec sollicitudin
+              </p>
+            </div>
+            <div class="level shape">
+              <h4>ui</h4>
+              <div class="prograss">
+                <span></span>
+              </div>
+              <h4>ux</h4>
+              <div class="prograss">
+                <span></span>
+              </div>
+              <h4>responsive</h4>
+              <div class="prograss">
+                <span></span>
+              </div>
+            </div>
+          </div>
+          <div class="cell">
+            <div class="box shape">
+              <i class="fa-solid fa-tv fa-3x"></i>
+              <h3>web development</h3>
+              <p>
+                Vestibulum ac diam sit amet quam vehicula elementum sed sit amet
+                dui. Quisque velit nisi, pretium ut lacinia in, elementum id
+                enim. Donec sollicitudin
+              </p>
+            </div>
+            <div class="level shape">
+              <h4>html</h4>
+              <div class="prograss">
+                <span></span>
+              </div>
+              <h4>css</h4>
+              <div class="prograss">
+                <span></span>
+              </div>
+              <h4>js</h4>
+              <div class="prograss">
+                <span></span>
+              </div>
+            </div>
+          </div>
+          <div class="cell">
+            <div class="box shape">
+              <i class="fa-solid fa-mobile fa-3x"></i>
+              <h3>app development</h3>
+              <p>
+                Vestibulum ac diam sit amet quam vehicula elementum sed sit amet
+                dui. Quisque velit nisi, pretium ut lacinia in, elementum id
+                enim. Donec sollicitudin
+              </p>
+            </div>
+            <div class="level shape">
+              <h4>c++</h4>
+              <div class="prograss">
+                <span></span>
+              </div>
+              <h4>java</h4>
+              <div class="prograss">
+                <span></span>
+              </div>
+              <h4>swift</h4>
+              <div class="prograss">
+                <span></span>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="black-background section">
+        <div class="container">
+          <div class="services-content">
+            <div class="status">
+              <h4>694</h4>
+              <p>completed design</p>
+            </div>
+            <div class="status">
+              <h4>324</h4>
+              <p>PAGES CREATED</p>
+            </div>
+            <div class="status">
+              <h4>134</h4>
+              <p>PAGES CODED</p>
+            </div>
+            <div class="status">
+              <h4>27</h4>
+              <p>APPS FINISHED</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
