add portfolio section

--- a/index.html
+++ b/index.html
@@ -182,5 +182,57 @@
         </div>
       </div>
     </div>
+    <div class="portfolio section">
+      <div class="container">
+        <div class="section-title">
+          <img src="media/axe-svgrepo-com.svg" alt="" />
+          <h2>our portfolio</h2>
+          <p>
+            Vestibulum ac diam sit amet quam vehicula elementum sed sit amet
+            dui. Quisque velit nisi, pretium ut lacinia in, elementum id enim.
+            Donec sollicitudin molestie malesuada
+          </p>
+        </div>
+        <div class="portfolio-content">
+          <div class="list">
+            <ul>
+              <li>graphic</li>
+              <li>web</li>
+            </ul>
+            <img src="media/logo2.png" alt="" />
+            <ul>
+              <li>development</li>
+              <li>app</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <div class="images">
+        <div class="box">
+          <img src="media/Artboard 1.jpg" alt="" />
+        </div>
+        <div class="box">
+          <img src="media/Artboard 2.jpg" alt="" />
+          <div class="text">
+            <h5>DOE BRANDING</h5>
+            <p>
+              Vestibulum ac diam sit amet quam vehicula elementum sed sit amet
+              dui. Quisque velit nisi, pretium ut lacinia in, elementum id
+              enim...
+            </p>
+          </div>
+        </div>
+        <div class="box">
+          <img src="media/Artboard 4.jpg" alt="" />
+        </div>
+        <div class="box">
+          <img src="media/Artboard 5.jpg" alt="" />
+        </div>
+      </div>
+      <button>LIKE WHAT YOU SEE?</button>
+      <div class="black-background section">
+        <button>VIEW OUR VIDEO</button>
+      </div>
+    </div>
   </body>
 </html>
