--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sparkle</title>
-    <link rel="stylesheet" href="css/normalize.txt" />
+    <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/all.min.css" />
     <link rel="stylesheet" href="css/master.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -56,7 +56,7 @@
             Donec sollicitudin molestie malesuada
           </p>
         </div>
-        <div class="services-content">
+        <div class="grid">
           <div class="cell">
             <div class="box shape">
               <i class="fa-solid fa-print fa-3x"></i>
@@ -161,7 +161,7 @@
       </div>
       <div class="black-background section">
         <div class="container">
-          <div class="services-content">
+          <div class="grid">
             <div class="status">
               <h4>694</h4>
               <p>completed design</p>
@@ -209,10 +209,10 @@
       </div>
       <div class="images">
         <div class="box">
-          <img src="media/Artboard 1.jpg" alt="" />
+          <img src="media/christopher-ott-gt3qT1h86bM-unsplash.jpg" alt="" />
         </div>
         <div class="box">
-          <img src="media/Artboard 2.jpg" alt="" />
+          <img src="media/karthik-sreenivas-81xxWruf4Gc-unsplash.jpg" alt="" />
           <div class="text">
             <h5>DOE BRANDING</h5>
             <p>
@@ -223,15 +223,86 @@
           </div>
         </div>
         <div class="box">
-          <img src="media/Artboard 4.jpg" alt="" />
+          <img src="media/patrick-chen-9cVG8Qc9K8s-unsplash.jpg" alt="" />
         </div>
         <div class="box">
-          <img src="media/Artboard 5.jpg" alt="" />
+          <img
+            src="media/michelangelo-azzariti-Lhc5iNjW6uM-unsplash.jpg"
+            alt=""
+          />
+        </div>
+        <div class="box">
+          <img src="media/pexels-mark-neal-5267655.jpg" alt="" />
+        </div>
+        <div class="box">
+          <img src="media/lukas-hellebrand-xsuMhmBtGs4-unsplash.jpg" alt="" />
         </div>
       </div>
       <button>LIKE WHAT YOU SEE?</button>
       <div class="black-background section">
         <button>VIEW OUR VIDEO</button>
+      </div>
+    </div>
+    <div class="team section">
+      <div class="container">
+        <div class="section-title">
+          <img src="media/axe-svgrepo-com.svg" alt="" />
+          <h2>our team</h2>
+          <p>
+            Vestibulum ac diam sit amet quam vehicula elementum sed sit amet
+            dui. Quisque velit nisi, pretium ut lacinia in, elementum id enim.
+            Donec sollicitudin molestie malesuada
+          </p>
+        </div>
+        <div class="grid">
+          <div class="column">
+            <div class="image">
+              <img src="media/pexels-pixabay-220453.jpg" alt="" />
+              <h4>john doe</h4>
+            </div>
+
+            <p class="shape">
+              Vestibulum ac diam sit amet quam vehicula elementum sed sit amet
+              dui. Quisque velit nisi, pretium ut lacinia in, elementum id enim.
+              Donec sollicitudin
+            </p>
+          </div>
+          <div class="column">
+            <div class="image">
+              <img src="media/pexels-regina-trissteria-13623557.jpg" alt="" />
+              <h4>john doe</h4>
+            </div>
+            <p class="shape">
+              Vestibulum ac diam sit amet quam vehicula elementum sed sit amet
+              dui. Quisque velit nisi, pretium ut lacinia in, elementum id enim.
+              Donec sollicitudin
+            </p>
+          </div>
+          <div class="column">
+            <div class="image">
+              <img src="media/pexels-brenoanp-1136575.jpg" alt="" />
+              <h4>john doe</h4>
+            </div>
+
+            <p class="shape">
+              Vestibulum ac diam sit amet quam vehicula elementum sed sit amet
+              dui. Quisque velit nisi, pretium ut lacinia in, elementum id enim.
+              Donec sollicitudin
+            </p>
+          </div>
+          <div class="column">
+            <div class="image">
+              <img src="media/pexels-creation-hill-1681010.jpg" alt="" />
+              <h4>john doe</h4>
+            </div>
+
+            <p class="shape">
+              Vestibulum ac diam sit amet quam vehicula elementum sed sit amet
+              dui. Quisque velit nisi, pretium ut lacinia in, elementum id enim.
+              Donec sollicitudin
+            </p>
+          </div>
+        </div>
       </div>
     </div>
   </body>
