add about-us and footer

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <div></div>
       </div>
     </header>
-    <div class="info">
+    <div class="info section">
       <div class="container">
         <img src="media/Composite Path.png" alt="" />
         <p>
@@ -305,5 +305,103 @@
         </div>
       </div>
     </div>
+    <div class="about section">
+      <div class="yellow"></div>
+      <div class="container">
+        <div class="article">
+          <p class="black">
+            Pellentesque in ipsum id orci porta dapibus. Lorem ipsum dolor sit
+            amet, consectetur adipiscing elit. Proin eget tortor risus. Lorem
+            ipsum dolor sit amet, consectetur adipiscing elit. Curabitur non
+            nulla sit amet nisl tempus convallis quis ac lectus. Vivamus magna
+            justo, lacinia eget consectetur sed, convallis at tellus. Curabitur
+            non nulla sit amet nisl tempus convallis quis ac lectus. Nulla quis
+            lorem ut libero malesuada feugiat. Pellentesque in ipsum id orci
+            porta dapibus. Lorem ipsum dolor sit amet, consectetur adipiscing
+            elit. Proin eget tortor risus. Lorem ipsum dolor sit amet,
+            consectetuquis ac lectus. Nulla quis lorem ut libero malesuada
+            feugiat.
+          </p>
+          <p>
+            “Proin eget tortor risus. Lorem ipsum dolor sit amet, consectetur
+            adipiscing elit. Curabisl tempus convallis justo, lacinia eget
+            malesuada feugiat”
+            <span>John Doe SEO</span>
+          </p>
+        </div>
+        <div class="article">
+          <p class="black">
+            Pellentesque in ipsum id orci porta dapibus. Lorem ipsum dolor sit
+            amet, consectetur adipiscing elit. Proin eget tortor risus. Lorem
+            ipsum dolor sit amet, consectetur adipiscing elit. Curabitur non
+            nulla sit amet nisl tempus convallis quis ac lectus. Vivamus magna
+            justo, lacinia eget consectetur sed, convallis at tellus. Curabitur
+            non nulla sit amet nisl tempus convallis quis ac lectus. Nulla quis
+            lorem ut libero malesuada feugiat. Pellentesque in ipsum id orci
+            porta dapibus. Lorem ipsum dolor sit amet, consectetur adipiscing
+            elit. Proin eget tortor risus. Lorem ipsum dolor sit amet,
+            consectetuquis ac lectus. Nulla quis lorem ut libero malesuada
+            feugiat.
+          </p>
+          <p>
+            “Proin eget tortor risus. Lorem ipsum dolor sit amet, consectetur
+            adipiscing elit. Curabisl tempus convallis justo, lacinia eget
+            malesuada feugiat”
+            <span>John Doe SEO</span>
+          </p>
+        </div>
+      </div>
+    </div>
+    <footer class="section">
+      <div class="container">
+        <div class="left">
+          <div>
+            <img src="media/logo.png" alt="" />
+            <p>
+              Pellentesque in ipsum id orci porta dapibus. Vivamus magna justo,
+              lacinia eget consectetur sed, convallis at tellus. Pellentesque in
+              ipsum id orci porta dapibus.
+            </p>
+            <p>
+              created by <span>Graphberry</span>,Belgrade,Serbia <br />
+              &copy; 2017 - Sparkle.Inc
+            </p>
+          </div>
+          <ul>
+            <li>links</li>
+            <li>home</li>
+            <li>our services</li>
+            <li>portfolio</li>
+            <li>testimonials</li>
+            <li>support</li>
+            <li>terms and conditions</li>
+          </ul>
+        </div>
+        <div class="right">
+          <ul>
+            <li>about us</li>
+            <li>sign in</li>
+            <li>register</li>
+            <li>aboutt us</li>
+            <li>blog</li>
+            <li>contact us</li>
+          </ul>
+          <div>
+            <h4>contact us</h4>
+            <p>
+              Get in touch with us via mail phone.We are waiting for your call
+              or message
+            </p>
+            <button>EmadAlshkreJR@gmail.com</button>
+            <div class="icons">
+              <i class="fa-brands fa-facebook"></i>
+              <i class="fa-brands fa-twitter"></i>
+              <i class="fa-brands fa-google-plus"></i>
+              <i class="fa-brands fa-dribbble"></i>
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
