--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@
               Get in touch with us via mail phone.We are waiting for your call
               or message
             </p>
-            <button>EmadAlshkreJR@gmail.com</button>
+            <button>**********@gmail.com</button>
             <div class="icons">
               <i class="fa-brands fa-facebook"></i>
               <i class="fa-brands fa-twitter"></i>
